--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,11 @@
 <resources>
-    <string name="app_name">NixSolutioinsTest</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">NixSolutionsTest</string>
     <string name="purchases">purchases</string>
     <string name="completed_purchases">completed</string>
+    <string name="enter_description">description</string>
+    <string name="enter_price">price</string>
+    <string name="accept">accept</string>
+    <string name="cancel">cancel</string>
+    <string name="enter_some_text">enter some text</string>
+    <string name="enter_some_price">enter some price</string>
 </resources>
