--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="enter_some_price">enter some price</string>
     <string name="price">price:"  "</string>
     <string name="select_all">Select all</string>
+    <string name="upload_new_image">Upload a new image using:</string>
+    <string name="storage_permission">Storage permission is needed to show files count</string>
+    <string name="storage_permission_isnt_granted">Storage permission isn\'t granted</string>
+    <string name="settings">SETTINGS</string>
+    <string name="open_permissions">Open Permissions and grant the Storage permission</string>
+    <string name="grant">GRANT</string>
+    <string name="storage_permissions_denied">Storage Permissions denied</string>
 </resources>
